Fixed minor layout bug on carousel when adding new pages.

--- a/framework/source/resource/qx/mobile/scss/ui/_carousel.scss
+++ b/framework/source/resource/qx/mobile/scss/ui/_carousel.scss
@@ -11,8 +11,9 @@
 .carousel-scroller {
   @include transition(all ease-out);
   @include transform(translate3d(0,0,0));
-  vertical-align:top;
-  text-align:left;
+  vertical-align: top;
+  text-align: left;
+  overflow:hidden;
 }
 
 .carousel-page {
